--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  	<section id="header">
  		<div class="container text-center">
  			<div class="user-box">
- 				<img src="img/ken.jpg" alt="user">
+ 				<img src="ken.jpg" alt="user">
  				<h1>Arrowen</h1>
  				<h5>Freelance Front End Developer</h5>
  			</div>
@@ -35,7 +35,7 @@
   <section id="user-info">
 	<div class="nav-bar">
 	<nav class="navbar navbar-expand-lg">
-  <a class="navbar-brand" href="#"><img src="img/logo.png" alt="#"></a>
+  <a class="navbar-brand" href="#"><img src="logo.png" alt="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <i class="fa fa-bars"></i>
   </button>
@@ -68,7 +68,7 @@
 	<div class="about container" id="about">
 		<div class="row">
 			<div class="col-md-6 text-center">
-				<img src="img/a.jpg" alt="user 2" class="profile-img">
+				<img src="a.jpg" alt="user 2" class="profile-img">
 			</div>
 			<div class="col-md-6">
 				<h3>WHO AM I ?</h3>
