--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Resume Website Template</title>
+<title>Arrowen's First Website</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -72,7 +72,7 @@
 			</div>
 			<div class="col-md-6">
 				<h3>WHO AM I ?</h3>
-				<p>My name is Mohabbat. I'm 16 and live in Nazipur,Rajshahi,Bangladesh. I'm interested in computer,music and sport. I like playing Video-games,Cricket and Batminton. My favorite game is batminton,but I never played it Professionaly. My dream is to be a Web-developer.</p>
+				<p>My name is Mohabbat. I'm 18 and live in Nazipur,Rajshahi,Bangladesh. I'm interested in computer,music and sport. I like playing Video-games,Cricket and Batminton. My favorite game is batminton,but I never played it Professionaly. My dream is to be a Web-developer.</p>
 
 				<div class="skills-bar">
 					<p>About Photoshop</p>
