--- a/index.html
+++ b/index.html
@@ -249,11 +249,11 @@
 			</div>
 			<div class="col-md-4">
 				<i class="fa fa-envelope"></i>
-				<p>Arrowen@gmail.com</p>
+				<p>Arrowenofficial@gmail.com</p>
 			</div>
 			<div class="col-md-4">
 				<i class="fa fa-internet-explorer"></i>
-				<p>www.Arrowenofficial.com</p>
+				<p>www.mearrowen.com</p>
 			</div>
 		</div>
 		<a href=""><button type="button" class="btn btn-primary"><i class="fa fa-download"></i>Resume</button></a>
